# mididings

./: .gitignore  LICENSE.md  MANIFEST.in  Makefile  README  README.md  connect.html  engine.html  event.html  extra-units.html  extra.html  genindex.html  index.html  install.sh  justfile  main.html  meson.build  meson_options.txt  misc.html  objects.inv  pkglist.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  start.html  tools.html  units.html  util.html
.reuse/: dep5
_static/: classic.css
arch/: PKGBUILD
dev/: get-buildpath.py  update-version-strings.sh
doc/: Makefile  build.bat  conf.py  engine.rst  index.rst  meson.build  util.rst
doc-html/: .buildinfo  connect.html  engine.html  event.html  extra-units.html  extra.html  genindex.html  index.html  main.html  misc.html  objects.inv  py-modindex.html  search.html  searchindex.js  start.html  tools.html  units.html  util.html
doc-html/_static/: classic.css
doc-html/doctrees/: connect.doctree  engine.doctree  environment.pickle  event.doctree  extra-units.doctree  extra.doctree  index.doctree  main.doctree  misc.doctree  start.doctree  tools.doctree  units.doctree  util.doctree
doc/man/: Makefile  livedings.scd  meson.build  mididings.scd  reproducible-man.sh  send_midi.scd
html-doc/examples/: skeleton.py
mididings/: __init__.py  arguments.py  engine.py  event.py  meson.build  misc.py  overload.py  patch.py  setup.py  unitrepr.py  util.py
mididings/extra/: inotify.py  memorize_scene.py  meson.build  osc.py
mididings/live/: livedings.py  meson.build  osc_control.py  widgets.py
mididings/units/: call.py  meson.build  printing.py
scripts/: livedings  meson.build  mididings  send_midi
src/: config.hh  engine.cc  meson.build  mesonconfig.hh.in  patch.hh  python_caller.cc  python_module.cc
src/backend/: base.hh  jack.cc
src/units/: base.hh  engine.hh
src/util/: python_bytes_converters.hh
tests/: test_version.py
www-pages/: index.html  style.css
www-pages/download/: bpmcounter.py  index.html  index.html?C=D;O=A  index.html?C=D;O=D  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=S;O=A  index.html?C=S;O=D  klick2ardour.py
www-pages/ecaplugin/: index.html
www-pages/gtklick/: NEWS  index.html
www-pages/jack_oscrolloscope/: NEWS  index.html
www-pages/klick/: index.html
www-pages/mididings/: index.html
www-pages/mididings/doc/: examples.1
www-pages/mididings/doc/examples/: index.html?C=D;O=A  index.html?C=M;O=A  index.html?C=M;O=D  index.html?C=N;O=D  index.html?C=S;O=A  index.html?C=S;O=D
www-pages/pyliblo/: index.html
www-pages/pysmf/: NEWS  index.html
