[build-system]
requires = ["setuptools>=65", "wheel>=0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "mididings"
version = "20230114"
description = 'A MIDI router/processor'
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.md"}
authors = [{name = "Dominic Sacré", email = "dominic.sacre@gmx.de"},]
maintainers = [{name = "George Rawlinson", email = "george@rawlinson.net.nz"},]
dependencies = ["decorator",]
classifiers = [
  "Topic :: Multimedia :: Sound/Audio :: MIDI",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
  "License :: OSI Approved :: GNU Free Documentation License (FDL)",
  "Development Status :: 5 - Production/Stable",
]

[project.optional-dependencies]
osc = ["pyliblo",]
smf = ["pysmf",]
autorestart = ["pyinotify>=0.8",]
dbus = ["dbus-python",]
xdg = ["pyxdg",]
doc = ["sphinx", "sphinxcontrib-fulltoc",]
test = ["pytest",]

[project.urls]
homepage = "https://github.com/mididings/mididings"
documentation = "https://mididings.github.io/mididings/"
