python_sources = [
  '__init__.py',
  'arguments.py',
  'constants.py',
  'engine.py',
  'event.py',
  'misc.py',
  'overload.py',
  'patch.py',
  'scene.py',
  'setup.py',
  'unitrepr.py',
  'util.py'
]
py.install_sources(python_sources, subdir: 'mididings')

subdir('extra')
subdir('units')
subdir('live')
